--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Connor Hayes
-# logo: /assets/img/headshot_circle.png
-# description: FIFA Tournament Football Analyst
+logo: /assets/img/headshot.jpg
+description: FIFA Tournament Football Analyst
 theme: jekyll-theme-minimal
