--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Connor Hayes
 logo: /assets/img/headshot.jpg
 description: FIFA Tournament Football Analyst
+show_downloads: False
 theme: jekyll-theme-minimal
