--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Connor Hayes
-logo: /assets/img/headshot.jpg
+logo: /assets/img/headshot_circle.jpg
 description: FIFA Tournament Football Analyst
 show_downloads: False
 theme: jekyll-theme-minimal
